fix user validator

--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -17,7 +17,7 @@
           Este campo es requerido.
         </ng-container>
         <ng-container *ngIf="userControl.errors?.['forbiddenUser']">
-          El nombre de usuario "User" o "Usuario" no es valido.
+          El nombre "usuario" no es valido.
         </ng-container>
         <ng-container *ngIf="userControl.errors?.['minlength']">
           El nombre de usuario debe tener al menos 6 caracteres.
